Tests/negative/missing_needs.arc
// Expect: E9001 (Missing effect declaration)
function bad(): Vec<i32> {
    Vec.new()
}
